@@ -9,6 +9,8 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+  	id "org.openjfx.javafxplugin" version "0.0.13"
+
 }
 
 repositories {
@@ -22,6 +24,11 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
+
+    implementation("io.vertx:vertx-core:4.4.1")
+    implementation("io.vertx:vertx-web:4.4.1")
+    implementation("io.vertx:vertx-web-client:4.4.1")
+
 }
 
 application {
@@ -32,4 +39,12 @@ application {
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ["--enable-preview"]
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += ["--enable-preview"]
 }
